--- a/src/app/quotes-details/quotes-details.component.html
+++ b/src/app/quotes-details/quotes-details.component.html
@@ -1,4 +1,4 @@
-<p>quotes-details works!</p>
+<p>quotes-details </p>
 <div class="container reduce">
     <div class="show">
       <p class="description">{{quote.description}}</p>
