--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -1,5 +1,22 @@
 <div class="container-fluid">
-    <h2 class="center">Wild Quotes</h2>
-
-     
+    <h1 class="center"> Touching quotes</h1>
+    <div class="row">
+         <div class="col-md-3">
+              <app-quotes-form (addQuote)='addNewQuote($event)'></app-quotes-form>
+         </div>
+         <div class="col-md-7 ">
+              <div class="all-card">
+                   <div *ngFor='let quote of quotes;let i=index' class="card-body all">
+                        <div class="card-body">
+                             <h2 appQuotes class="card-title two">{{quote.name}}</h2>
+                             <p class="three">Posted by:{{quote.poster}} on  {{quote.completeDate|date:'dd/MM/yyyy'}}</p>
+                             <button class="btn btn-outline-warning four" (click)='toggleDetails(i)'>Check the quote</button>
+                             <app-quotes-detail *ngIf='quote.showDescription'  (isComplete)='deleteQuote($event,i)'  [quote]='quote'></app-quotes-detail>
+                        </div>
+                   </div>
+              </div>
+         </div>
+        <div class="col-md-2">
+        </div>
+    </div>
 </div>
