--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <h1 class="center"> Touching quotes</h1>
+    <h1 class="center">Powerfull Quotes From Legends</h1>
     <div class="row">
          <div class="col-md-3">
               <app-quotes-form (addQuote)='addNewQuote($event)'></app-quotes-form>
